syntax = 'proto3';

package proto;

message Events {
    bytes bloom = 1;
    repeated Event events = 2;
    bool bloom_dirty = 3;
}
message Event {
    bytes bloom = 1;
    string data = 2;
    int32 lines = 3;
    string path = 4;
    repeated Field fields = 5;
    string ts = 6;
    bool bloom_dirty = 7;
}
message Field {
    string key = 1;
    string value = 2;
}
message FileMonitor {
    string path = 1;
    int64 offset = 2;
    bool poll = 3;
}

message Meta {
    int64 count = 1;
}
message EventRes {
    string data = 1;
    int32 lines = 2;
    repeated Field fields = 3;
    repeated int32 foundAtIndex = 4;
    string ts = 5;
    string path = 6;
}

message SearchRes {
    int64 count = 1;
    repeated EventRes events = 2;
    string ts = 3;
}



